localization/v2.4.x/site/ar/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
مرحبًا بك في مستندات ميلفوس!</h1></p>
<p><h2 class="sub-title">
ستتعرف هنا على ماهية Milvus، وكيفية تثبيت Milvus واستخدامه ونشره لإنشاء تطبيق وفقًا لاحتياجات عملك.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">جرّب ميلفوس المُدار مجاناً!</h2>
    <p class="promotion-desc">جرّب زيليز كلاود مجاناً! أسهل طريقة لتجربة ميلفوس!</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup">زيليز كلاود</a> <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup">زيليز كلاود الصين</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">البدء<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/ar/v2.4.x/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/ar/v2.4.x/install_standalone-docker.md"> <p class="link-btn">تثبيت ميلفوس</p> </a><p>تعرف على كيفية تثبيت Milvus باستخدام إما Docker Compose أو على Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/ar/v2.4.x/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/ar/v2.4.x/quickstart.md"> <p class="link-btn">البدء السريع</p> </a><p>تعرف على كيفية تشغيل Milvus بسرعة باستخدام نموذج التعليمات البرمجية.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">المعسكر التدريبي</p> </a><p>
  تعلم كيفية إنشاء تطبيقات البحث عن التشابه المتجه باستخدام Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">مقالات موصى بها<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>استخدام</p>
<ul>
<li><a href="/docs/ar/v2.4.x/manage-collections.md">إدارة المجموعات</a></li>
<li><a href="/docs/ar/v2.4.x/insert-update-delete.md">إدراج وإدراج وحذف وإدراج وحذف</a></li>
<li><a href="/docs/ar/v2.4.x/index-vector-fields.md">فهرسة الحقول المتجهة</a></li>
<li><a href="/docs/ar/v2.4.x/single-vector-search.md">البحث في متجه واحد</a></li>
<li><a href="/docs/ar/v2.4.x/get-and-scalar-query.md">استعلام الحصول على واستعلام قياسي</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>النشر</p>
<ul>
<li><a href="/docs/ar/v2.4.x/configure-docker.md">تكوين ميلفوس</a></li>
<li><a href="/docs/ar/v2.4.x/deploy_s3.md">إدارة التبعيات</a></li>
<li><a href="/docs/ar/v2.4.x/eks.md">النشر على السحابة</a></li>
<li><a href="/docs/ar/v2.4.x/scaleout.md">توسيع نطاق مجموعة Milvus العنقودية</a></li>
<li><a href="/docs/ar/v2.4.x/monitor_overview.md">المراقبة والتنبيه</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>تعلم</p>
<ul>
<li><a href="/docs/ar/v2.4.x/system_configuration.md">تكوين النظام</a></li>
<li><a href="/docs/ar/v2.4.x/architecture_overview.md">نظرة عامة على البنية</a></li>
<li><a href="/docs/ar/v2.4.x/index.md">فهرس المتجهات</a></li>
<li><a href="/docs/ar/v2.4.x/metric.md">مقاييس التشابه</a></li>
<li><a href="/docs/ar/v2.4.x/glossary.md">مسرد المصطلحات</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">الجديد في المستندات<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>2024 مارس 2024 - إصدار Milvus 2.4.0</em></p>
<ul>
<li>تمت إضافة إرشادات حول كيفية <a href="/docs/ar/v2.4.x/multi-vector-search.md">إجراء البحث المختلط</a>.</li>
<li>تمت إضافة وصف <a href="/docs/ar/v2.4.x/gpu_index.md">لفهرس GPU</a>.</li>
<li>تمت إضافة إرشادات حول كيفية <a href="/docs/ar/v2.4.x/embeddings.md">تضمين بياناتك باستخدام PyMilvus</a>.</li>
<li>تمت إضافة أوصاف مضافة لـ <a href="/docs/ar/v2.4.x/milvus-cdc-overview.md">Milvus CDC</a>.</li>
</ul>
</div>
