localization/v3.0.x/site/ar/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
مرحبًا بك في مستندات ميلفوس!</h1></p>
<p><h2 class="sub-title">
ستتعرف هنا على ماهية Milvus، وكيفية تثبيت Milvus واستخدامه ونشره لإنشاء تطبيق وفقًا لاحتياجات عملك.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">جرّب ميلفوس المُدار مجاناً!</h2>
    <p class="promotion-desc">Zilliz Cloud خالي من المتاعب، مدعوم من Milvus وأسرع 10 مرات.</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">زيليز كلاود</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">ابدأ الآن<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/ar/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/ar/install_standalone-docker.md"> <p class="link-btn">تثبيت ميلفوس</p> </a><p>تعرف على كيفية تثبيت Milvus باستخدام Docker Compose أو على Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/ar/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/ar/quickstart.md"> <p class="link-btn">البدء السريع</p> </a><p>تعرف على كيفية تشغيل Milvus بسرعة باستخدام نموذج التعليمات البرمجية.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">المعسكر التدريبي</p> </a><p>
  تعلم كيفية إنشاء تطبيقات البحث عن التشابه المتجه باستخدام Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">مقالات موصى بها<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>استخدام</p>
<ul>
<li><a href="/docs/ar/manage-collections.md">إدارة المجموعات</a></li>
<li><a href="/docs/ar/insert-update-delete.md">إدراج وإدراج وحذف وإدراج وحذف</a></li>
<li><a href="/docs/ar/single-vector-search.md">البحث في متجه واحد</a></li>
<li><a href="/docs/ar/multi-vector-search.md">البحث الهجين</a></li>
<li><a href="/docs/ar/get-and-scalar-query.md">الحصول على واستعلام عددي</a></li>
<li><a href="/docs/ar/milvus_for_agents.md">ميلفوس لوكلاء الذكاء الاصطناعي</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>النشر</p>
<ul>
<li><a href="/docs/ar/configure-docker.md">تكوين ميلفوس</a></li>
<li><a href="/docs/ar/deploy_s3.md">إدارة التبعيات</a></li>
<li><a href="/docs/ar/eks.md">النشر على السحابة</a></li>
<li><a href="/docs/ar/scaleout.md">توسيع نطاق مجموعة Milvus العنقودية</a></li>
<li><a href="/docs/ar/monitor_overview.md">المراقبة والتنبيه</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>تعلم</p>
<ul>
<li><a href="/docs/ar/system_configuration.md">تكوين النظام</a></li>
<li><a href="/docs/ar/architecture_overview.md">نظرة عامة على البنية</a></li>
<li><a href="/docs/ar/index-explained.md">شرح الفهرس</a></li>
<li><a href="/docs/ar/metric.md">مقاييس التشابه</a></li>
<li><a href="/docs/ar/glossary.md">مسرد المصطلحات</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">الجديد في المستندات<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>2026 مايو 2026 - تحديثات الإصدار Milvus 3.0.x</em></p>
<ul>
<li>تمت إضافة ميزات الإصدار Milvus 3.0.x إلى <a href="/docs/ar/release_notes.md">ملاحظات الإصدار،</a> بما في ذلك المجموعة الخارجية واللقطات والتخزين V3 وتكامل النظام البيئي للبحيرة.</li>
<li>تمت إضافة إرشادات حول كيفية <a href="/docs/ar/single-vector-search.md#Sort-Search-Results-by-Scalar-Fields--Milvus-30x">فرز نتائج البحث حسب الحقول القياسية</a> <a href="/docs/ar/get-and-scalar-query.md#Aggregate-Query-Results--Milvus-30x">وتجميع نتائج الاستعلام</a>.</li>
<li>تمت إضافة إرشادات حول كيفية استخدام <a href="/docs/ar/nullable-and-default.md">حقول المتجهات القابلة للإلغاء</a> وحقول <a href="/docs/ar/set-collection-ttl.md#Set-entity-level-TTL--Milvus-30x">TTL على مستوى الكيان</a>.</li>
<li>تمت إضافة إرشادات حول كيفية استخدام <a href="/docs/ar/minhash-function.md">MinHash Function</a> لتوقيعات MinHash من جانب الخادم.</li>
<li>تمت إضافة إرشادات حول كيفية <a href="/docs/ar/search-with-embedding-lists.md">البحث باستخدام قوائم التضمين</a> وتشغيل <a href="/docs/ar/force-merge.md">فرض ضغط الدمج</a>.</li>
</ul>
</div>
